counting-app/manifests/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  rules:
    - host: t-clo-902-lil-1-vm1.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /kubernetes-dashboard
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-web
                port:
                  number: 8000
  tls:
    - hosts:
        - t-clo-902-lil-1-vm1.westeurope.cloudapp.azure.com
      secretName: dashboard-tls
